--- a/crud_demo/assets/main.css
+++ b/crud_demo/assets/main.css
@@ -73,7 +73,7 @@
   display: flex;
 }
 
-.modifyBtn {
+.modify-btn {
   width: 40px;
   height: 24px;
   padding: 0;
@@ -83,7 +83,7 @@
   margin-right: 5px;
 }
 
-.modifyBtn:hover {
+.modify-btn:hover {
   width: 40px;
   height: 24px;
   padding: 0;
@@ -93,29 +93,7 @@
   margin-right: 5px;
 }
 
-.saveBtn {
-  width: 40px;
-  height: 24px;
-  padding: 0;
-  border-radius: 3px;
-  margin-right: 10px;
-  background-color: #435a9d;
-  color: white;
-  border: none;
-}
-
-.saveBtn:hover {
-  width: 40px;
-  height: 24px;
-  padding: 0;
-  border-radius: 3px;
-  margin-right: 10px;
-  background-color: #5c6fa8;
-  color: white;
-  border: none;
-}
-
-.cancelBtn {
+.delete-btn {
   width: 40px;
   height: 24px;
   padding: 0;
@@ -125,7 +103,7 @@
   border: none;
 }
 
-.cancelBtn:hover {
+.delete-btn:hover {
   width: 40px;
   height: 24px;
   padding: 0;
@@ -135,27 +113,7 @@
   border: none;
 }
 
-.deleteBtn {
-  width: 40px;
-  height: 24px;
-  padding: 0;
-  border-radius: 3px;
-  background-color: #d4546b;
-  color: white;
-  border: none;
-}
-
-.deleteBtn:hover {
-  width: 40px;
-  height: 24px;
-  padding: 0;
-  border-radius: 3px;
-  background-color: #d46b7f;
-  color: white;
-  border: none;
-}
-
-.addBtn {
+.add-btn {
   width: 48px;
   padding: 4px;
   background-color: #435a9d;
@@ -163,7 +121,7 @@
   border: none;
 }
 
-.addBtn:hover {
+.add-btn:hover {
   width: 48px;
   padding: 4px;
   background-color: #5c6fa8;
@@ -171,18 +129,6 @@
   border: none;
 }
 
-.addIcon {
+.add-icon {
   font-size: 16px;
-}
-
-.ageInput {
-  width: 64px;
-}
-
-.nameInput {
-  width: 104px;
-}
-
-.addressInput {
-  width: 180px;
 }
