--- a/crud_demo/assets/main.css
+++ b/crud_demo/assets/main.css
@@ -21,7 +21,7 @@
 }
 
 .search-input {
-  width: 182px !important;
+  width: 163px !important;
 }
 
 .ivu-input-wrapper {
@@ -66,7 +66,7 @@
 }
 
 .ivu-modal {
-  width: 200px !important;
+  width: 300px !important;
 }
 
 .operation {
@@ -131,4 +131,8 @@
 
 .add-icon {
   font-size: 16px;
+}
+
+.action {
+  display: flex;
 }
